--- a/exercicios/ex-09/index2.html
+++ b/exercicios/ex-09/index2.html
@@ -10,6 +10,8 @@
         }
         table{
             width: 500px;
+            border-collapse: collapse;
+            position: relative;
         }
         caption{
             font-size: 2em;
@@ -17,11 +19,20 @@
             padding: 10px;
             background-color: lightgrey;
         }
+        tbody > tr:nth-child(2n) {background-color: lightgray;
+
+        }
         td, th {
             border: 1px solid black;
         }
         thead, tfoot {
             background-color: gray;
+        }
+        thead > tr > th {
+            position: sticky;
+                
+                background-color: rgba(99, 96, 96, 0.096);
+                top: -1px;
         }
         td.num {
             text-align: right;
@@ -57,6 +68,10 @@
     </tr>
     <tr><td>Rio de Janeiro</td>
     <td class="num">xxxx</td></tr>
+    <tr>
+        <td>Sps</td>
+        <td class="num">xxxx</td>
+    </tr>
     </tbody>
 
     <tfoot>     
